--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,11 +58,16 @@
 
     <TextView
         android:id="@+id/txt_status"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="Status"
-
+        android:maxEms="25"
+        android:singleLine="false"
+        android:scrollHorizontally="false"
+        android:ellipsize="end"
+        android:breakStrategy="balanced"
+        android:hyphenationFrequency="normal"
         app:layout_constraintStart_toStartOf="@+id/txt_timestamp"
         app:layout_constraintTop_toTopOf="@+id/txt_timestamp"
         android:visibility="invisible"/>
