Added app icon and Sign Up/Log In activities

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="yellow_bee">#FFFDF293</color>
+    <color name="yellow_bee">#FFE36D</color>
+    <color name="yellow_m">#FFE36D</color>
+    <color name="gray_m">#232323</color>
 </resources>
