--- a/app/src/main/res/layout/fragment_popup.xml
+++ b/app/src/main/res/layout/fragment_popup.xml
@@ -93,6 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:text="Add Swarm"
+        android:background="@drawable/button_rounded_corners"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
