--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -126,21 +126,21 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/button_rounded_corners" />
 
-    <View
-        android:id="@+id/view_compass"
+    <ImageView
+        android:id="@+id/image_compass"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:background="@color/purple_500"
+        android:src="@drawable/compass"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/map" />
 
     <Button
         android:id="@+id/btn_maps"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:text="maps"
-        app:layout_constraintTop_toBottomOf="@+id/view_compass"
-        app:layout_constraintRight_toRightOf="@+id/view_compass"
+        app:layout_constraintTop_toBottomOf="@+id/image_compass"
+        app:layout_constraintRight_toRightOf="@+id/image_compass"
         android:background="@drawable/button_rounded_corners" />
 
 
