--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Theme.BeeFound" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.BeeFound1" parent="Theme.MaterialComponents.Light.NoActionBar" >
+        <!-- Primary app colors -->
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/gray_m</item>
+        <item name="colorOnPrimary">@color/teal_200</item>
+        <!-- Status bar color -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    </style>
 </resources>
