--- a/app/src/main/res/drawable/btn_shape_close.xml
+++ b/app/src/main/res/drawable/btn_shape_close.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="16dp"
-    android:shape="rectangle">
-    <solid android:color="@color/white" />
-    <stroke
-        android:width="1dp"
-        android:color="@android:color/black" />
-    <corners android:radius="10dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Existing button shape -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/white" />
+            <corners android:radius="10dp" />
+        </shape>
+    </item>
+
+    <!-- Horizontal line -->
+    <item android:gravity="center">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/yellow_bee" />
+            <size android:height="3dp" />
+            <corners android:radius="10dp" />
+            <size android:width="25dp" /><!-- This is the thickness of the line -->
+        </shape>
+    </item>
+</layer-list>
