--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -8,13 +8,13 @@
 
         <item
             android:id="@+id/nav_hives"
-            android:icon="@drawable/add_button_svgrepo_com"
-            android:title="Hives" />
+            android:icon="@drawable/date_input_svgrepo_com"
+            android:title="@string/hives" />
 
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/add_button_svgrepo_com"
-            android:title="Profile" />
+            android:title="@string/profile" />
     </group>
 
     <item android:title="">
@@ -23,7 +23,7 @@
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/baseline_logout_24"
-                android:title="Logout" />
+                android:title="@string/logout" />
         </menu>
 
     </item>
