--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -99,7 +99,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/regular_user" />
+            android:text="@string/regular_user"
+            android:checked="true"/>
 
         <RadioButton
             android:id="@+id/beekeeper"
